# hyperion.ng

./: .azure.yml  .devcontainer.json  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  CMakePresets.json  CompileHowto.md  HyperionConfig.h.in  Installation.md  README.md  vcpkg.json
.ci/: ci_build.sh  ci_install.sh
.github/: nightly.md  pr_comment.yml
.github/actions/download-pre-built-deps/: action.yml  buildspec.json
.github/scripts/: build.sh
.github/workflows/: apt.yml  codeql.yml  comment.yml  debian.yml  dnf.yml  macos.yml  nightly.yml  prebuild_deps.yml  projectm.yml  pull-request.yml  push-master.yml  push.yml  push_pull.yml  qt5.yml  qt5_6.yml  qt6.yml  qt6.yml.old  release.yml  repo_build_deb.yml  repo_build_rpm.yml  repo_publish.yml  test.yml  windows.yml  yum.yml
.github/workflows/apt/: amd64.json  arm64.json  armhf.json
.github/workflows/vcpkg_overlay_triplets/: arm64-osx-min1100.cmake  x64-osx-min1012.cmake
.github/workflows/yum/: x86_64.json
assets/webconfig/: index.html
assets/webconfig/content/: conf_leds.html
assets/webconfig/i18n/: cs.json  de.json  en.json  es.json  it.json  nl.json  pl.json  ro.json  sv.json
assets/webconfig/js/: content_grabber.js  content_leds.js  hyperion.js
assets/webconfig/js/lib/: plain-draggable.min.js
cmake/: Dependencies.cmake  FindDirectX9.cmake  FindJPEG.cmake  FindLibUSB.cmake  FindLibudev.cmake  FindProjectM.cmake  FindTurboJPEG.cmake  Findlibusb-1.0.cmake  Findmbedtls.cmake  Findqmdnsengine.cmake  GitVersion.cmake  HelperFunctions.cmake  HelperMacros.cmake  Packaging.cmake  RuntimeDependenciesDarwin.cmake  RuntimeDependenciesLinux.cmake  RuntimeDependenciesWindows.cmake  Summary.cmake  packages.cmake
cmake/linux/: BundleLinux.cmake.in
cmake/macos/: AppleScript.scpt  BundleMacOS.cmake.in  Info.plist.in
cmake/windows/: BundleWindows.cmake.in
config/: hyperion.config.json.default
debian/: distributions  rules
dependencies/: CMakeLists-libyuv.txt.in  CMakeLists.txt
dependencies/cmake/: flatbuffers.cmake  helper_functions.cmake  mbedtls.cmake  protobuf.cmake  qmdnsengine.cmake
dependencies/patch/protobuf/: xpaclri.diff
dependencies/patches/libyuv/: CMakeLists.txt
doc/development/: CompileHowto.md
include/grabber/: OsxFrameGrabber.h  V4L2Grabber.h
include/grabber/audio/: AudioGrabber.h  ProjectMWrapper.h
include/grabber/directx/: DirectXWrapper.h
include/grabber/drm/: DRMFrameGrabber.h  DRMWritebackConverter.h
include/grabber/video/v4l2/: V4L2Grabber.h
include/hyperion/: Grabber.h  GrabberWrapper.h
include/utils/: EncoderThread.h  PixelFormat.h  settings.h
include/webserver/: WebSocketServer.h
libsrc/: CMakeLists.txt
libsrc/api/: CMakeLists.txt  JsonAPI.cpp
libsrc/boblightserver/: CMakeLists.txt
libsrc/cec/: CMakeLists.txt
libsrc/commandline/: CMakeLists.txt
libsrc/effectengine/: CMakeLists.txt
libsrc/flatbufserver/: CMakeLists.txt
libsrc/forwarder/: CMakeLists.txt
libsrc/grabber/audio/: AudioGrabber.cpp  AudioWrapper.cpp  CMakeLists.txt  ProjectMWrapper.cpp
libsrc/grabber/directx/: CMakeLists.txt
libsrc/grabber/drm/: CMakeLists.txt  DRMFrameGrabber.cpp
libsrc/grabber/osx/: CMakeLists.txt  OsxFrameGrabber.cpp
libsrc/grabber/qt/: CMakeLists.txt
libsrc/grabber/v4l2/: CMakeLists.txt  V4L2Grabber.cpp
libsrc/grabber/video/: CMakeLists.txt
libsrc/grabber/video/mediafoundation/: MFGrabber.cpp
libsrc/grabber/video/v4l2/: V4L2Grabber.cpp  dmabuf.h
libsrc/hyperion/: CMakeLists.txt  GrabberWrapper.cpp  Hyperion.cpp  hyperion.schema.json  resource.qrc
libsrc/hyperion/schema/: schema-grabberAudio.json  schema-grabberV4L2.json  schema-webSocket.json
libsrc/leddevice/: CMakeLists.txt
libsrc/leddevice/dev_hid/: ProviderHID.cpp
libsrc/leddevice/dev_tinker/: LedDeviceTinkerforge.h
libsrc/mdns/: CMakeLists.txt
libsrc/protoserver/: CMakeLists.txt
libsrc/python/: CMakeLists.txt
libsrc/utils/: CMakeLists.txt  ImageResampler.cpp
libsrc/webserver/: CMakeLists.txt  QtHttpClientWrapper.cpp  QtHttpClientWrapper.h  WebSocketClient.cpp.old  WebSocketClient.h.old  WebSocketServer.cpp  WsServer.cpp  WsServer.h
rpmbuild/: hyperion.repo.in  hyperion.spec
snap/: snapcraft.yaml
src/: CMakeLists.txt
src/hyperion-aml/: CMakeLists.txt
src/hyperion-dispmanx/: CMakeLists.txt
src/hyperion-framebuffer/: CMakeLists.txt
src/hyperion-osx/: CMakeLists.txt
src/hyperion-qt/: CMakeLists.txt
src/hyperion-remote/: CMakeLists.txt
src/hyperion-v4l2/: CMakeLists.txt
src/hyperion-x11/: CMakeLists.txt
src/hyperion-xcb/: CMakeLists.txt
src/hyperiond/: CMakeLists.txt  hyperiond.cpp  hyperiond.h  main.cpp
test/: CMakeLists.txt
test/dispmanx2png/: CMakeLists.txt
test/jsonchecks/: checkeffects.py  checkjson.py  checkschema.py
